<resources>
    <string name="app_name">AdminCafePOSApp</string>
    <string name="orders_title">Orders</string>
    <string name="menu_title">Menu</string>
    <string name="tables_title">Tables</string>
    <string name="reservations_title">Reservations</string>
    <string name="members_title">Members</string>
    <string name="reservation_id">Reservation ID:</string>
    <string name="table_no">Table No:</string>
    <string name="date">Date:</string>
    <string name="surname">Surname:</string>
    <string name="time">Time:</string>
    <string name="remove_reservation">Remove Reservation</string>
    <string name="create_new_reservation">Create new Reservation</string>
    <string name="no_of_people">No of People:</string>
    <string name="add_reservation">Add Reservation</string>
    <string name="table">Table</string>
    <string name="confirm">Confirm</string>
    <string name="tan_lee_etc">Tan, Lee, etc</string>
    <string name="remove_table">REMOVE TABLE</string>
    <string name="add_table">ADD TABLE</string>
    <string name="table_number">Table Number:</string>
    <string name="table_status">Table Status:</string>
    <string name="add_table_info">Add Table Info</string>
    <string name="number_of_seats">Number of Seats:</string>
    <string name="number_of_seat_popup">Number of Seat:</string>
    <string name="remove_table_popup">Remove Table</string>
    <string name="add_drinks">ADD DRINKS</string>
    <string name="remove_drinks">REMOVE DRINKS</string>
    <string name="add_food">ADD FOOD</string>
    <string name="remove_food">REMOVE FOOD</string>
    <string name="register_member">REGISTER MEMBER</string>
    <string name="remove_member">REMOVE MEMBER</string>
    <string name="members">MEMBERS</string>
    <string name="member_id">MEMBER ID</string>
    <string name="member_name">MEMBER NAME</string>
    <string name="food">FOOD</string>
    <string name="beverages">BEVERAGES</string>
    <string name="name">NAME</string>
    <string name="price">PRICE (RM)</string>
    <string name="reservations">RESERVATIONS</string>
    <string name="reservation_id_upper">RESERVATION ID</string>
    <string name="no_of_people_upper">NO OF PEOPLE</string>
    <string name="surname_upper">SURNAME</string>
    <string name="date_upper">DATE</string>
    <string name="time_upper">TIME</string>
    <string name="_1_2_3_etc">1, 2, 3, etc</string>
    <string name="table_no_upper">TABLE NO.</string>
    <string name="date_2">Date</string>
    <string name="time_2">Time</string>
    <string name="table_no_2">Table No.</string>
    <string name="no_of_seats">No. of Seats</string>
    <string name="status">Status</string>
    <string name="reservation_id_2">Reservation ID</string>
    <string name="no_of_people_2">No. of People</string>
    <string name="surname_2">Surname</string>
    <string name="members_2">Members</string>
    <string name="member_id_2">Member ID</string>
    <string name="member_name_2">Member Name</string>
    <string name="name_2">Name</string>
    <string name="price_rm">Price(RM)</string>
    <string name="beverages_2">Beverages</string>
    <string name="food_2">Food</string>
    <string name="reservations_2">Reservations</string>
    <string name="transactions_2">Transactions</string>
    <string name="order_id_2">Order ID</string>
    <string name="status_2">Status</string>
    <string name="remove_transaction">REMOVE TRANSACTION</string>
    <string name="select_date">Select Date:</string>
    <string name="print">Print</string>

    <string-array name="table_status">
        <item>Available</item>
        <item>Unavailable</item>
        <item>Reserved</item>
    </string-array>

</resources>
