<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<TextView
    android:id="@+id/transactionsTitle"
    android:layout_width="904dp"
    android:layout_height="wrap_content"
    android:text="@string/transactions_2"
    android:textSize="35sp"
    android:textStyle="bold"
    android:fontFamily="@font/raleway"
    android:padding="10dp"
    android:textAlignment="center"
    android:textColor="@android:color/black"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

<View
    android:id="@+id/transactionstitlelinetop"
    android:layout_width="904dp"
    android:layout_height="1dp"
    android:background="#d3d3d3"
    app:layout_constraintTop_toBottomOf="@id/transactionsTitle"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

<LinearLayout
    android:id="@+id/transactionsInfotitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/transactionstitlelinetop"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <View
        android:id="@+id/transactionstitleline1"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#d3d3d3" />
    <TextView
        android:id="@+id/transactionsIdTitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/order_id_2"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:fontFamily="@font/raleway"
        android:textColor="@android:color/black" />

    <View
        android:id="@+id/transactionstitleline"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#d3d3d3" />

    <TextView
        android:id="@+id/transactionsTableNoTitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/table_no_2"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:fontFamily="@font/raleway"
        android:textColor="@android:color/black"/>

    <View
        android:id="@+id/transactionstitleline3"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#d3d3d3" />

    <TextView
        android:id="@+id/transactionsStatusTitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/status_2"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="@font/raleway"
        android:textColor="@android:color/black"/>

    <View
        android:id="@+id/transactionstitleline4"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#d3d3d3" />

</LinearLayout>

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/transactions_recyclerview"
    android:layout_width="904dp"
    android:layout_height="450dp"
    app:layout_constraintTop_toBottomOf="@+id/transactionsInfotitle"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:background="@drawable/textview_border"/>

    <Button
        android:id="@+id/transactiondeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_transaction"
        android:layout_marginStart="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:fontFamily="@font/raleway"
        android:hint="@string/select_date"
        android:drawableEnd="@drawable/calendar_icon"
        app:layout_constraintTop_toTopOf="@id/print_btn"
        app:layout_constraintBottom_toBottomOf="@id/print_btn"
        app:layout_constraintEnd_toStartOf="@id/print_btn"/>

<Button
    android:id="@+id/print_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/print"
    android:layout_marginEnd="250dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
