<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/reservationTitle"
        android:layout_width="1256dp"
        android:layout_height="wrap_content"
        android:text="@string/reservations"
        android:textSize="40sp"
        android:textAlignment="center"
        android:padding="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/reservationtitlelinetop"
        android:layout_width="1256dp"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/reservationTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/reservationInfotitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/reservationtitlelinetop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <View
            android:id="@+id/reservationtitleline1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />
        <TextView
            android:id="@+id/reservationIdTitle"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/reservation_id_upper"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"

            />

        <View
            android:id="@+id/reservationtitleline2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />
        <TextView
            android:id="@+id/reservationNoOfPeopleTitle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/no_of_people_upper"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"

            />

        <View
            android:id="@+id/reservationtitleline3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />
        <TextView
            android:id="@+id/reservationSurnameTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/surname_upper"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"

            />

        <View
            android:id="@+id/reservationtitleline4"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />
        <TextView
            android:id="@+id/reservationDateTitle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/date_upper"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"

            />

        <View
            android:id="@+id/reservationtitleline5"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />
        <TextView
            android:id="@+id/reservationTimeTitle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/time_upper"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"

            />

        <View
            android:id="@+id/reservationtitleline6"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reservations_recyclerView"
        android:layout_width="1256dp"
        android:layout_height="450dp"
        app:layout_constraintTop_toBottomOf="@+id/reservationInfotitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textview_border"/>

    <RelativeLayout
        android:id="@+id/rbuttons"
        android:layout_width="1256dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/reservations_recyclerView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"  >

    <Button
        android:id="@+id/removeReservationBtn"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_reservation"
        android:layout_marginStart="150dp"
        android:layout_alignParentStart="true"
        />

    <Button
        android:id="@+id/createReservationBtn"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/create_new_reservation"
        android:layout_marginEnd="150dp"
        android:layout_alignParentEnd="true"
        />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>