<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/remove_reservation_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="160dp" />

    <TextView
        android:id="@+id/remove_reservation_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_reservation"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:fontFamily="@font/raleway"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/remove_reservation_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/surname"
        android:textStyle="bold"
        android:fontFamily="@font/raleway"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remove_reservation_title"
        app:layout_constraintEnd_toEndOf="@id/remove_reservation_guideline"
        />

    <Spinner
        android:id="@+id/remove_reservation_surname_spinner"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:inputType="textPersonName"
        android:fontFamily="@font/raleway"
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textStyle="bold"
        android:hint="@string/tan_lee_etc"
        android:importantForAutofill="no"
        android:background="@drawable/edit_text_style"
        app:layout_constraintStart_toEndOf="@id/remove_reservation_guideline"
        app:layout_constraintTop_toBottomOf="@id/remove_reservation_title"
        />

    <TextView
        android:id="@+id/remove_reservation_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/date"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:fontFamily="@font/raleway"
        app:layout_constraintTop_toBottomOf="@id/remove_reservation_surname"
        app:layout_constraintEnd_toStartOf="@id/remove_reservation_guideline"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Spinner
        android:id="@+id/remove_reservation_date_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_style"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingEnd="5dp"
        android:paddingStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/remove_reservation_surname_spinner"
        app:layout_constraintStart_toEndOf="@id/remove_reservation_guideline"
        />

    <TextView
        android:id="@+id/remove_reservation_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/time"
        android:fontFamily="@font/raleway"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/remove_reservation_date"
        app:layout_constraintEnd_toStartOf="@id/remove_reservation_guideline"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Spinner
        android:id="@+id/remove_reservation_time_spinner"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/edit_text_style"
        app:layout_constraintTop_toBottomOf="@id/remove_reservation_date_spinner"
        app:layout_constraintStart_toEndOf="@id/remove_reservation_guideline"
        />


    <TextView
        android:id="@+id/remove_reservation_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/table"
        android:textColor="@android:color/black"
        android:fontFamily="@font/raleway"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/remove_reservation_guideline"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remove_reservation_time" />

    <Spinner
        android:id="@+id/remove_reservation_table_spinner"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_style"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toEndOf="@id/remove_reservation_guideline"
        app:layout_constraintTop_toBottomOf="@id/remove_reservation_time_spinner" />

    <Button
        android:id="@+id/confirm_removeReservationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remove_reservation_table_spinner"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>